Remove old comment, replace known colors with variables

--- a/src/components/primer-page/Header/style.scss
+++ b/src/components/primer-page/Header/style.scss
@@ -29,7 +29,7 @@
       font-weight: 300;
       line-height: 32px;
       letter-spacing: 0;
-      color: #a7aeb7;
+      color: $c_grayc-chateau;
       text-align: center;
     }
   }
