--- a/src/components/primer-page/JoystreamDAO/style.scss
+++ b/src/components/primer-page/JoystreamDAO/style.scss
@@ -48,7 +48,7 @@
         font-weight: 400;
         line-height: 40px;
         letter-spacing: 0;
-        color: #a7aeb7;
+        color: $c_grayc-chateau;
         text-align: left;
       }
 
@@ -96,7 +96,7 @@
         font-weight: 400;
         line-height: 28px;
         letter-spacing: 0;
-        color: #a7aeb7;
+        color: $c_grayc-chateau;
         text-align: left;
       }
     }
@@ -126,7 +126,7 @@
         font-weight: 400;
         line-height: 28px;
         letter-spacing: 0;
-        color: #a7aeb7;
+        color: $c_grayc-chateau;
         text-align: left;
       }
     }
@@ -156,7 +156,7 @@
         font-weight: 400;
         line-height: 28px;
         letter-spacing: 0;
-        color: #a7aeb7;
+        color: $c_grayc-chateau;
         text-align: left;
       }
     }
