--- a/src/components/primer-page/VideoPlatform/style.scss
+++ b/src/components/primer-page/VideoPlatform/style.scss
@@ -46,7 +46,7 @@
         font-weight: 400;
         line-height: 40px;
         letter-spacing: 0;
-        color: #a7aeb7;
+        color: $c_grayc-chateau;
         text-align: left;
       }
     }
@@ -70,7 +70,7 @@
         font-weight: 400;
         line-height: 40px;
         letter-spacing: 0;
-        color: #a7aeb7;
+        color: $c_grayc-chateau;
         text-align: left;
       }
 
@@ -117,7 +117,7 @@
         font-weight: 400;
         line-height: 28px;
         letter-spacing: 0;
-        color: #a7aeb7;
+        color: $c_grayc-chateau;
         text-align: left;
       }
     }
@@ -148,7 +148,7 @@
         font-weight: 400;
         line-height: 28px;
         letter-spacing: 0;
-        color: #a7aeb7;
+        color: $c_grayc-chateau;
         text-align: left;
       }
     }
@@ -186,7 +186,6 @@
     }
   }
 
-  // PRIMER TODO: Continue here!
   @media #{$screen-max-md} {
     &__video-platform {
       padding-top: 100px;
