--- a/src/components/MainnetBanner/style.scss
+++ b/src/components/MainnetBanner/style.scss
@@ -8,12 +8,13 @@
   @extend %largeContainer;
 
   position: relative;
-  z-index: 3;
+  z-index: 4;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   height: 56px;
+  background-color: #111316;
 
   &__reminder {
     font-family: $font-secondary;
