--- a/src/components/ArrowButton/style.scss
+++ b/src/components/ArrowButton/style.scss
@@ -2,17 +2,12 @@
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
 
-  &__text {
-    position: absolute;
-    left: 20px;
-  }
-
   &__arrow {
-    position: absolute;
-    right: 0;
-    transform: rotate(-90deg);
+    margin-right: 0 !important;
+    transform: rotate(-90deg) scale(.8);
   }
 }
