--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -1,5 +1,45 @@
 @import '../styles/main.scss';
 
+%section-title {
+  font-family: $font-primary;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: .25px;
+}
+
+%h3 {
+  font-family: $font-primary;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 48px;
+  letter-spacing: 0;
+}
+
+%h6 {
+  font-family: $font-primary;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0;
+}
+
+%base-1 {
+  font-family: $font-secondary;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0;
+}
+
+%landing-page-button-text {
+  font-family: $font-primary;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+
 .IndexPage {
   &__link {
     display: flex;
