Implement base creator tokens section

--- a/src/components/index-page/VideoNFTs/style.scss
+++ b/src/components/index-page/VideoNFTs/style.scss
@@ -4,7 +4,7 @@
 .IndexPage {
   &__video-nfts-wrapper {
     padding-top: 96px;
-    background-color: #111316;
+    background-color: $c_black;
   }
 
   &__video-nfts {
