--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -8,6 +8,14 @@
   letter-spacing: .25px;
 }
 
+%section-title-md {
+  font-family: $font-primary;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: .25px;
+}
+
 %h3 {
   font-family: $font-primary;
   font-size: 40px;
