--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -16,6 +16,14 @@
   letter-spacing: .25px;
 }
 
+%h2 {
+  font-family: $font-primary;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 56px;
+  letter-spacing: 0;
+}
+
 %h3 {
   font-family: $font-primary;
   font-size: 40px;
