--- a/src/components/index-page/WhatWeDo/style.scss
+++ b/src/components/index-page/WhatWeDo/style.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/main';
+@import '../../../pages/style';
 
 .IndexPage {
   &__manifesto-cta-wrapper {
@@ -23,15 +24,13 @@
     }
 
     &__subtitle {
-      font-family: $font-secondary;
-      font-size: 14px;
-      line-height: 20px;
-      letter-spacing: 0;
-      color: #5c6475;
+      @extend %section-title;
+
+      color: #4038ff;
     }
 
     &__title {
-      margin-top: 24px;
+      margin-top: 4px;
       font-family: $font-primary;
       font-size: 48px;
       line-height: 56px;
