--- a/src/components/index-page/Payouts/style.scss
+++ b/src/components/index-page/Payouts/style.scss
@@ -11,6 +11,8 @@
     @extend %container;
 
     display: grid;
+    height: 486px;
+    min-height: 486px;
     gap: 34px;
     grid-template-columns: 500px auto;
 
@@ -42,9 +44,21 @@
 
     &__illustration {
       position: relative;
+      height: 486px;
+      min-height: 486px;
+      overflow: hidden;
 
       &__background {
+        position: absolute;
+        right: 0;
         max-width: 576px;
+      }
+
+      &__foreground {
+        position: absolute;
+        bottom: -200px;
+        left: -10px;
+        width: 384px;
       }
     }
   }
