--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -53,11 +53,21 @@
     }
 
     &__illustration {
-      display: flex;
-      justify-content: center;
+      position: relative;
+      height: 440px;
+      // overflow: hidden;
 
-      &__image {
+      &__background {
+        position: absolute;
+        right: 0;
         height: 360px;
+      }
+
+      &__foreground {
+        position: absolute;
+        bottom: 35px;
+        left: 15px;
+        width: 633px;
       }
     }
   }
