--- a/src/components/index-page/Hero/style.scss
+++ b/src/components/index-page/Hero/style.scss
@@ -1,33 +1,16 @@
 @import '../../../styles/main';
 @import '../../../pages/style';
 
-%h1 {
-  font-family: $font-primary;
-  font-size: 60px;
-  font-weight: 400;
-  line-height: 68px;
-  letter-spacing: 0;
-  text-align: center;
-}
-
-%base-1 {
-  font-family: $font-secondary;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 28px;
-  letter-spacing: 0;
-  text-align: center;
-}
-
 .IndexPage {
   &__hero-wrapper {
-    padding: 96px 100px;
+    padding: 96px 100px 192px 100px;
     background-color: black;
   }
 
   &__hero {
-    @extend %container;
+    @extend %largeContainer;
 
+    position: relative;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -37,6 +20,7 @@
 
       max-width: 818px;
       color: $c_white;
+      text-align: center;
 
       span > div {
         display: inline-block;
@@ -61,6 +45,7 @@
 
       margin-top: 24px;
       color: #a7aeb7;
+      text-align: center;
     }
 
     &__button {
@@ -77,19 +62,30 @@
     &__illustration {
       position: relative;
       margin-top: 80px;
-      overflow: hidden;
+
+      &__background {
+        filter: drop-shadow(0 33px 100px rgba(0, 0, 0, .22)) drop-shadow(0 7.37098px 22.3363px rgba(0, 0, 0, .131144)) drop-shadow(0 2.19453px 6.6501px rgba(0, 0, 0, .0888564));
+      }
 
       &__foreground {
         position: absolute;
         top: 95px;
-        right: -25px;
+        right: -45px;
       }
 
       &__button {
         position: absolute;
         top: 400px;
-        right: 0;
+        right: -24px;
       }
+    }
+
+    &__overlay {
+      position: absolute;
+      bottom: -100px;
+      width: 100%;
+      height: 400px;
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000 100%);
     }
   }
 }
