--- a/src/components/index-page/CreatorTokens/style.scss
+++ b/src/components/index-page/CreatorTokens/style.scss
@@ -11,6 +11,7 @@
     @extend %container;
 
     &__hero {
+      position: relative;
       display: flex;
       align-items: center;
       flex-direction: column;
@@ -86,6 +87,14 @@
           width: 312px;
         }
       }
+
+      &__overlay {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 156px;
+        background: linear-gradient(180deg, rgba(17, 19, 22, 0) 0%, #111316 100%);
+      }
     }
 
     &__fundraising {
@@ -133,6 +142,10 @@
       grid-template-columns: 500px auto;
 
       &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
         &__section-title {
           @extend %section-title-md;
 
@@ -159,8 +172,8 @@
         justify-content: center;
 
         &__image {
-          max-width: 480px;
-          max-height: 168px;
+          width: 712px;
+          height: 360px;
         }
       }
     }
@@ -176,12 +189,6 @@
       &__illustration {
         display: flex;
         justify-content: center;
-        overflow-y: hidden;
-
-        &__image {
-          width: 360px;
-          height: 555px;
-        }
       }
 
       &__content {
@@ -239,6 +246,7 @@
           @extend %base-3;
 
           margin-top: 16px;
+          padding-right: 15px;
           color: #a7aeb7;
         }
       }
