--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -78,14 +78,24 @@
   &__section-title {
     display: block;
     margin-bottom: 20px;
-    font-family: $font-secondary;
-    font-weight: bold;
+    font-family: $font-primary;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0;
     color: $c_white;
+    text-align: left;
   }
 
   &__section-link {
     display: block;
+    font-family: $font-secondary;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0;
     color: $c_grayc-chateau;
+    text-align: left;
 
     &:hover,
     &:active {
@@ -110,9 +120,11 @@
     margin-left: 12px;
     font-family: $font-secondary;
     font-size: 14px;
+    font-weight: 400;
     line-height: 20px;
-    letter-spacing: -.4000000059604645px;
+    letter-spacing: 0;
     color: #a7aeb7;
+    text-align: left;
 
     &:hover {
       color: $c_white;
@@ -121,10 +133,12 @@
 
   &__social-icon {
     width: 16px;
+    fill: #a7aeb7;
 
     &:hover,
     &:active {
       transform: scale(1.5);
+      fill: $c_white;
     }
   }
 
@@ -184,6 +198,10 @@
     &__form {
       flex-direction: column;
       margin-bottom: 80px;
+
+      &__subtitle {
+        max-width: 315px;
+      }
 
       &__input {
         width: auto;
