--- a/src/components/MainnetBanner/style.scss
+++ b/src/components/MainnetBanner/style.scss
@@ -1,14 +1,21 @@
 @import '../../styles/main';
 
 .Banner-wrapper {
+  position: relative;
+  z-index: 4;
   background-color: #111316;
+}
+
+.Banner-overlay {
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(90deg, rgba(92, 100, 117, 0) 0%, #5c6475 28.65%, rgba(92, 100, 117, 0) 58.33%);
 }
 
 .Banner {
   @extend %largeContainer;
 
   position: relative;
-  z-index: 4;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -38,7 +45,7 @@
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0;
-    color: $c_neutral-200;
+    color: $c_white;
     text-align: left;
 
     &__arrow {
