--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -82,6 +82,22 @@
   letter-spacing: 0;
 }
 
+@mixin h6 {
+  font-family: $font-primary;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0;
+}
+
+@mixin h7 {
+  font-family: $font-primary;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0;
+}
+
 %base-1 {
   font-family: $font-secondary;
   font-size: 20px;
