--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -122,6 +122,22 @@
   letter-spacing: .25px;
 }
 
+@mixin base-1 {
+  font-family: $font-secondary;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0;
+}
+
+@mixin base-3 {
+  font-family: $font-secondary;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+
 %landing-page-button-text {
   font-family: $font-primary;
   font-size: 18px;
