--- a/src/components/index-page/CreatorTokens/style.scss
+++ b/src/components/index-page/CreatorTokens/style.scss
@@ -42,7 +42,7 @@
       }
 
       &__subtitle {
-        @extend %base-1;
+        @include base-1;
 
         max-width: 816px;
         margin-top: 16px;
@@ -90,9 +90,9 @@
 
       &__overlay {
         position: absolute;
-        bottom: 0;
+        bottom: -5px;
         width: 100%;
-        height: 156px;
+        height: 161px;
         background: linear-gradient(180deg, rgba(17, 19, 22, 0) 0%, #111316 100%);
       }
     }
@@ -253,6 +253,18 @@
 
   @media #{$screen-max-lg} {
     &__creator-tokens {
+      &__hero {
+        &__illustration {
+          &__background {
+            width: 85%;
+          }
+
+          &__foreground {
+            width: 27.6%;
+          }
+        }
+      }
+
       &__fundraising,
       &__stable-income,
       &__secure-listing,
@@ -264,6 +276,16 @@
 
   @media (max-width: 1050px) {
     &__creator-tokens {
+      &__hero {
+        &__illustration {
+          height: 715px;
+
+          &__foreground {
+            top: 155px;
+          }
+        }
+      }
+
       &__fundraising {
         grid-template-columns: 450px auto;
 
@@ -290,6 +312,25 @@
 
   @media #{$screen-max-md} {
     &__creator-tokens {
+      &__hero {
+        &__subtitle {
+          max-width: 580px;
+        }
+
+        &__illustration {
+          height: 650px;
+
+          &__background {
+            left: 0;
+            margin: auto;
+          }
+
+          &__foreground {
+            left: 2%;
+          }
+        }
+      }
+
       &__fundraising,
       &__stable-income,
       &__secure-listing,
@@ -307,6 +348,12 @@
 
   @media (max-width: 850px) {
     &__creator-tokens {
+      &__hero {
+        &__illustration {
+          height: 590px;
+        }
+      }
+
       &__fundraising,
       &__secure-listing {
         &__content {
@@ -321,7 +368,32 @@
   }
 
   @media #{$screen-max-sm} {
+    &__creator-tokens-wrapper {
+      padding: 80px 0;
+    }
+
     &__creator-tokens {
+      &__hero {
+        &__title {
+          @include h4;
+        }
+
+        &__subtitle {
+          @include base-3;
+
+          max-width: 500px;
+        }
+
+        &__illustration {
+          height: 450px;
+          max-width: 600px;
+
+          &__foreground {
+            top: 95px;
+          }
+        }
+      }
+
       &__fundraising,
       &__stable-income,
       &__secure-listing,
@@ -362,6 +434,16 @@
     }
   }
 
+  @media (max-width: 500px) {
+    &__creator-tokens__hero__illustration {
+      height: 400px;
+
+      &__foreground {
+        top: 77px;
+      }
+    }
+  }
+
   @media (max-width: 475px) {
     &__creator-tokens {
       &__fundraising,
@@ -373,6 +455,36 @@
             max-width: 100%;
           }
         }
+      }
+    }
+  }
+
+  @media (max-width: 425px) {
+    &__creator-tokens__hero {
+      &__title {
+        padding: 0 10px;
+
+        & > br {
+          display: none;
+        }
+      }
+
+      &__illustration {
+        height: 300px;
+
+        &__foreground {
+          top: 65px;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 380px) {
+    &__creator-tokens__hero__illustration {
+      height: 250px;
+
+      &__foreground {
+        top: 58px;
       }
     }
   }
